# tech-icons

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  SKILL.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
catalog/: .build_hash  embedding_ids.json  embeddings.npz  enrichments.yaml  icons.json  keyword_index.json
docs/: integration-arch-diagram.md
scripts/: build_catalog.py  normalize_icons.py
src/: __init__.py  concepts.py  normalize.py  search.py  server.py
src/bridges/: ppt_master.py
src/web/: __init__.py  app.py
src/web/static/: app.js  index.html  style.css
tech_icons/: __init__.py  _paths.py  concepts.py  formats.py  normalize.py  search.py  server.py
tech_icons/bridges/: ppt_master.py
tech_icons/catalog/: .build_hash  embedding_ids.json  enrichments.yaml  icons.json  keyword_index.json
tech_icons/web/: app.py
tech_icons/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_bridges_ppt_master.py  test_build_pipeline.py  test_concepts.py  test_enrichments_integrity.py  test_formats.py  test_normalize.py  test_search.py  test_server.py  test_web.py
